istio/service-mesh-example-apps/k8s/booking-service-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  selector:
    matchLabels:
      app: booking-service
  replicas: 2
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: service-mesh-example-apps/booking-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: booking-service
