istio/service-mesh-example-apps/k8s/modern-user-v1-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: modern-user-lb-service
spec:
  selector:
    app: modern-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
#doesn't work as external ip is pending
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: modern-user-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 18080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: modern-user-destination
spec:
  host: modern-user
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: modern-user-route
spec:
  hosts:
    - "*"
  gateways:
    - modern-user-gateway
  http:
    - route:
        - destination:
            host: modern-user
            port:
              number: 8080
